--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,17 @@
 #Kotlin
 kotlin.code.style=official
 kotlin.daemon.jvmargs=-Xmx3072M
+#KSP
+ksp.useKSP2=true
+ksp.incremental=false
 
 #Gradle
-org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 -XX:MaxMetaspaceSize=512m -XX:+UseParallelGC
 org.gradle.configuration-cache=true
 org.gradle.caching=true
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
 
 #Android
 android.nonTransitiveRClass=true
